--- a/head.html
+++ b/head.html
@@ -1,4 +1,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="theme-color" content="#000000"/>
 
 <!-- Import Mapping -->
 <script type="importmap">
@@ -17,3 +18,4 @@
 <script src="/scripts/scripts.js" type="module"></script>
 
 <link rel="stylesheet" href="/styles/styles.css" />
+<link rel="preconnect" href="https://cdn.skypack.dev">
