adds adyen ui integration and render code
Signed-off-by: Stephen Rugh <rugh@adobe.com>

--- a/head.html
+++ b/head.html
@@ -9,7 +9,8 @@
       "@dropins/storefront-cart/": "/scripts/__dropins__/storefront-cart/",
       "@dropins/storefront-checkout/": "/scripts/__dropins__/storefront-checkout/",
       "@dropins/storefront-pdp/": "/scripts/__dropins__/storefront-pdp/",
-      "@dropins/storefront-order-confirmation/": "/scripts/__dropins__/storefront-order-confirmation/"
+      "@dropins/storefront-order-confirmation/": "/scripts/__dropins__/storefront-order-confirmation/",
+      "@dropins/adyen-checkout-extension/": "/scripts/__dropins__/adyen-checkout-extension/"
     }
   }
 </script>
