Add font family

--- a/head.html
+++ b/head.html
@@ -18,3 +18,4 @@
 <script src="/scripts/scripts.js" type="module"></script>
 
 <link rel="stylesheet" href="/styles/styles.css" />
+<link rel="stylesheet" href="https://use.typekit.net/hjh7dfo.css">
